--- a/index (2).html
+++ b/index (2).html
@@ -1,6 +1,6 @@
 ﻿<html>
 <head>
-<title>Список класса</title>
+<title>Достижения</title>
 </head>
 <center>
 <h1>Участие в "Дебюте десятиклассников"</h1>
